Add some restrictions and update spec file
